--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-plugin-pwa": "^0.16.5"
+    "vite-plugin-pwa": "^0.16.5",
+    "bun-types": "latest"
   },
   "dependencies": {
     "@ethersproject/abstract-signer": "^5.7.0",
