--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@memewar/ui",
   "type": "module",
   "dependencies": {
+    "expo-image": "^1.5.1",
     "expo-router": "^2.0.8",
     "nativewind": "^2.0.11",
     "solito": "4.0.1"
