--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
 			},
 			"style": {
 				"noNonNullAssertion": "off",
-				"useShorthandArrayType": "error"
+				"useShorthandArrayType": "error",
+				"noParameterAssign": "off"
 			},
 			"suspicious": {
 				"noArrayIndexKey": "off",
