wip: use cookie to verify challenge

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,6 +15,9 @@
       "@ui/*": [
         "../../packages/ui/*"
       ],
+      "@utils/*": [
+        "../../packages/utils/*"
+      ]
     }
   },
   "include": [
