chore: perform initial migration

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@memewar/db",
   "private": "true",
+  "scripts": {
+    "generate": "bun drizzle-kit generate:pg --config=./drizzle.config.ts"
+  },
   "dependencies": {
     "drizzle-orm": "^0.28.6",
     "postgres": "^3.3.5"
