--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -18,14 +18,20 @@
       "@utils/*": [
         "../../packages/utils/*"
       ]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
-  ],
+  ]
 }
