--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
-    "expo": "^49.0.3",
-    "next": "~13.1.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "@memewar/api": "workspace:*",
+    "@memewar/ui": "workspace:*",
+    "expo": "^49.0.13",
+    "next": "~13.5.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.70.5",
     "react-native-web": "~0.18.7",
     "raf": "^3.4.1",
