--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,7 @@
     "nativewind": "^2.0.11",
     "react-hook-form": "^7.47.0",
     "remeda": "^1.27.0",
-    "rn-passkeys": "^0.1.6",
+    "react-native-passkeys": "^0.1.6",
     "solito": "4.0.1",
     "viem": "^1.15.1",
     "wagmi": "^1.4.3",
