--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "workspaces": [
     "apps/web",
-    "packages/*"
+    "packages/*",
+    "tooling/*"
   ],
   "scripts": {
     "web": "cd apps/web && bun run start"
