--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../config/tsconfig/base.json",
+    "extends": "../../tooling/tsconfig/base.json",
     "compilerOptions": {
         "paths": {
             "@db/*": [
