--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,10 +4,11 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "start": "npx expo start -c",
-    "android": "npx expo run:android",
-    "ios": "npx expo run:ios",
-    "eject": "npx expo eject"
+    "android": "bunx expo run:android",
+    "build": "bunx eas build",
+    "ios": "bunx expo run:ios",
+    "eject": "bunx expo eject",
+    "start": "bunx expo start -c"
   },
   "dependencies": {
     "@babel/runtime": "^7.18.9",
@@ -15,16 +16,17 @@
     "@types/react-native": "^0.71.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "burnt": "^0.11.0",
-    "expo": "^48.0.7",
+    "expo": "^49.0.13",
     "expo-constants": "^14.2.1",
     "expo-dev-client": "^2.1.5",
     "expo-font": "^11.1.1",
     "expo-linear-gradient": "^12.1.2",
     "expo-linking": "^4.0.1",
-    "expo-router": "^1.4.3",
+    "expo-router": "^2.0.9",
     "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.3",
+    "metro-core": "^0.79.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.4",
@@ -41,13 +43,5 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "metro-minify-terser": "^0.74.1",
     "typescript": "^5.1.3"
-  },
-  "resolutions": {
-    "metro": "0.76.0",
-    "metro-resolver": "0.76.0"
-  },
-  "overrides": {
-    "metro": "0.76.0",
-    "metro-resolver": "0.76.0"
   }
 }
