--- a/apps/web/.tamagui/tamagui.config.json
+++ b/apps/web/.tamagui/tamagui.config.json
@@ -32069,193 +32069,6 @@
             "isStyledHOC": false
           }
         },
-        "MyComponent": {
-          "staticConfig": {
-            "acceptsClassName": true,
-            "defaultProps": {
-              "alignItems": "stretch",
-              "display": "flex",
-              "flexDirection": "column",
-              "flexBasis": "auto",
-              "boxSizing": "border-box",
-              "position": "relative",
-              "minHeight": 0,
-              "minWidth": 0,
-              "flexShrink": 0,
-              "backgroundColor": "red"
-            },
-            "validStyles": {
-              "enterStyle": true,
-              "exitStyle": true,
-              "hoverStyle": true,
-              "pressStyle": true,
-              "focusStyle": true,
-              "backfaceVisibility": true,
-              "borderBottomEndRadius": true,
-              "borderBottomStartRadius": true,
-              "borderBottomWidth": true,
-              "borderLeftWidth": true,
-              "borderRightWidth": true,
-              "borderStyle": true,
-              "borderTopEndRadius": true,
-              "borderTopStartRadius": true,
-              "borderTopWidth": true,
-              "borderWidth": true,
-              "transform": true,
-              "alignContent": true,
-              "alignItems": true,
-              "alignSelf": true,
-              "borderEndWidth": true,
-              "borderStartWidth": true,
-              "bottom": true,
-              "display": true,
-              "end": true,
-              "flexBasis": true,
-              "flexDirection": true,
-              "flexWrap": true,
-              "gap": true,
-              "columnGap": true,
-              "rowGap": true,
-              "justifyContent": true,
-              "left": true,
-              "margin": true,
-              "marginBottom": true,
-              "marginEnd": true,
-              "marginHorizontal": true,
-              "marginLeft": true,
-              "marginRight": true,
-              "marginStart": true,
-              "marginTop": true,
-              "marginVertical": true,
-              "overflow": true,
-              "padding": true,
-              "paddingBottom": true,
-              "paddingEnd": true,
-              "paddingHorizontal": true,
-              "paddingLeft": true,
-              "paddingRight": true,
-              "paddingStart": true,
-              "paddingTop": true,
-              "paddingVertical": true,
-              "position": true,
-              "right": true,
-              "start": true,
-              "top": true,
-              "direction": true,
-              "shadowOffset": true,
-              "shadowRadius": true,
-              "backgroundColor": true,
-              "borderColor": true,
-              "borderBottomColor": true,
-              "borderTopColor": true,
-              "borderLeftColor": true,
-              "borderRightColor": true,
-              "borderEndColor": true,
-              "borderStartColor": true,
-              "shadowColor": true,
-              "color": true,
-              "placeholderTextColor": true,
-              "textDecorationColor": true,
-              "textShadowColor": true,
-              "outlineColor": true,
-              "borderRadius": true,
-              "borderTopLeftRadius": true,
-              "borderTopRightRadius": true,
-              "borderBottomLeftRadius": true,
-              "borderBottomRightRadius": true,
-              "width": true,
-              "height": true,
-              "minWidth": true,
-              "minHeight": true,
-              "maxWidth": true,
-              "maxHeight": true,
-              "x": true,
-              "y": true,
-              "scale": true,
-              "perspective": true,
-              "scaleX": true,
-              "scaleY": true,
-              "skewX": true,
-              "skewY": true,
-              "matrix": true,
-              "rotate": true,
-              "rotateY": true,
-              "rotateX": true,
-              "rotateZ": true,
-              "WebkitLineClamp": true,
-              "animationIterationCount": true,
-              "aspectRatio": true,
-              "borderImageOutset": true,
-              "borderImageSlice": true,
-              "borderImageWidth": true,
-              "columnCount": true,
-              "flex": true,
-              "flexGrow": true,
-              "flexOrder": true,
-              "flexPositive": true,
-              "flexShrink": true,
-              "flexNegative": true,
-              "fontWeight": true,
-              "gridRow": true,
-              "gridRowEnd": true,
-              "gridRowGap": true,
-              "gridRowStart": true,
-              "gridColumn": true,
-              "gridColumnEnd": true,
-              "gridColumnGap": true,
-              "gridColumnStart": true,
-              "lineClamp": true,
-              "opacity": true,
-              "order": true,
-              "orphans": true,
-              "tabSize": true,
-              "widows": true,
-              "zIndex": true,
-              "zoom": true,
-              "scaleZ": true,
-              "shadowOpacity": true,
-              "borderBottomStyle": true,
-              "borderTopStyle": true,
-              "borderLeftStyle": true,
-              "borderRightStyle": true,
-              "overflowX": true,
-              "overflowY": true,
-              "userSelect": true,
-              "cursor": true,
-              "contain": true,
-              "pointerEvents": true,
-              "boxSizing": true,
-              "boxShadow": true,
-              "outlineStyle": true,
-              "outlineOffset": true,
-              "outlineWidth": true
-            },
-            "variants": {
-              "fullscreen": {
-                "true": {
-                  "position": "absolute",
-                  "top": 0,
-                  "left": 0,
-                  "right": 0,
-                  "bottom": 0
-                }
-              },
-              "elevation": {
-                "...size": "Function",
-                ":number": "Function"
-              },
-              "blue": {
-                "true": {
-                  "backgroundColor": "blue"
-                }
-              }
-            },
-            "componentName": "MyComponent",
-            "isReactNative": false,
-            "isText": false,
-            "isStyledHOC": false
-          }
-        },
         "Nav": {
           "staticConfig": {
             "acceptsClassName": true,
@@ -44428,256 +44241,170 @@
   "tamaguiConfig": {
     "fonts": {
       "body": {
-        "family": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif",
-        "lineHeight": {
-          "1": 23,
-          "2": 24,
-          "3": 25,
-          "4": 27,
-          "5": 30,
-          "6": 32,
-          "7": 34,
-          "8": 38,
-          "9": 46,
-          "10": 66,
-          "11": 77,
-          "12": 85,
-          "13": 97,
-          "14": 121,
-          "15": 148,
-          "16": 172,
-          "true": 27
-        },
-        "weight": {
-          "1": "300",
-          "2": "300",
-          "3": "300",
-          "4": "300",
-          "5": "300",
-          "6": "300",
-          "7": "300",
-          "8": "300",
-          "9": "300",
-          "10": "300",
-          "11": "300",
-          "12": "300",
-          "13": "300",
-          "14": "300",
-          "15": "300",
-          "16": "300",
-          "true": "300"
-        },
-        "letterSpacing": {
-          "1": 0,
-          "2": 0,
-          "3": 0,
-          "4": 0,
-          "5": 0,
-          "6": 0,
-          "7": 0,
-          "8": 0,
-          "9": 0,
-          "10": 0,
-          "11": 0,
-          "12": 0,
-          "13": 0,
-          "14": 0,
-          "15": 0,
-          "16": 0,
-          "true": 0
-        },
-        "face": {
-          "100": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
-          },
-          "200": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
-          },
-          "300": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
-          },
-          "400": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
-          },
-          "500": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
-          },
-          "600": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
-          },
-          "700": {
-            "normal": "InterBold"
-          },
-          "800": {
-            "normal": "InterBold"
-          },
-          "900": {
-            "normal": "InterBold"
-          }
+        "family": {
+          "6": "var(--font-audiowide)",
+          "val": "var(--font-audiowide)",
+          "isVar": true,
+          "key": "audiowide",
+          "name": "Audiowide"
         },
         "size": {
-          "1": 12,
-          "2": 13,
-          "3": 14,
-          "4": 15,
-          "5": 18,
-          "6": 20,
-          "7": 22,
-          "8": 25,
-          "9": 33,
-          "10": 51,
-          "11": 61,
-          "12": 68,
-          "13": 79,
-          "14": 101,
-          "15": 125,
-          "16": 147,
-          "true": 15
-        }
-      },
-      "heading": {
-        "family": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif",
-        "lineHeight": {
-          "1": 21,
-          "2": 22,
-          "3": 23,
-          "4": 24,
-          "5": 26,
-          "6": 25,
-          "7": 30,
-          "8": 33,
-          "9": 40,
-          "10": 56,
-          "11": 65,
-          "12": 72,
-          "13": 82,
-          "14": 102,
-          "15": 124,
-          "16": 144,
-          "true": 24
+          "6": 15
         },
         "weight": {
-          "1": "400",
-          "2": "400",
-          "3": "400",
-          "4": "400",
-          "5": "400",
-          "6": "400",
-          "7": "700",
-          "8": "700",
-          "9": "700",
-          "10": "700",
-          "11": "700",
-          "12": "700",
-          "13": "700",
-          "14": "700",
-          "15": "700",
-          "16": "700",
-          "true": "700"
+          "6": "400"
+        },
+        "color": {
+          "6": "$colorFocus",
+          "7": "$color"
         },
         "letterSpacing": {
-          "1": 2,
-          "2": 2,
-          "3": 2,
-          "4": 2,
           "5": 2,
           "6": 1,
           "7": 0,
           "8": -1,
           "9": -2,
           "10": -3,
-          "11": -3,
           "12": -4,
-          "13": -4,
           "14": -5,
-          "15": -6,
-          "16": -6,
-          "true": -6
-        },
-        "size": {
-          "1": 11,
-          "2": 12,
-          "3": 13,
-          "4": 14,
-          "5": 16,
-          "6": 15,
-          "7": 20,
-          "8": 23,
-          "9": 30,
-          "10": 46,
-          "11": 55,
-          "12": 62,
-          "13": 72,
-          "14": 92,
-          "15": 114,
-          "16": 134,
-          "true": 14
-        },
-        "transform": {
-          "1": "uppercase",
-          "2": "uppercase",
-          "3": "uppercase",
-          "4": "uppercase",
-          "5": "uppercase",
-          "6": "uppercase",
-          "7": "none",
-          "8": "none",
-          "9": "none",
-          "10": "none",
-          "11": "none",
-          "12": "none",
-          "13": "none",
-          "14": "none",
-          "15": "none",
-          "16": "none",
-          "true": "none"
-        },
-        "color": {
-          "1": "$colorFocus",
-          "2": "$colorFocus",
-          "3": "$colorFocus",
-          "4": "$colorFocus",
-          "5": "$colorFocus",
-          "6": "$colorFocus",
-          "7": "$color",
-          "8": "$color",
-          "9": "$color",
-          "10": "$color",
-          "11": "$color",
-          "12": "$color",
-          "13": "$color",
-          "14": "$color",
-          "15": "$color",
-          "16": "$color",
-          "true": "$color"
+          "15": -6
         },
         "face": {
           "100": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
           },
           "200": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
           },
           "300": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
           },
           "400": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
           },
           "500": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
           },
           "600": {
-            "normal": "Inter, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif"
+            "normal": "audiowide"
           },
           "700": {
-            "normal": "InterBold"
+            "normal": "audiowide"
           },
           "800": {
-            "normal": "InterBold"
+            "normal": "audiowide"
           },
           "900": {
-            "normal": "InterBold"
+            "normal": "audiowide"
+          }
+        }
+      },
+      "heading": {
+        "family": {
+          "6": "var(--font-audiowide)",
+          "val": "var(--font-audiowide)",
+          "isVar": true,
+          "key": "audiowide",
+          "name": "Audiowide"
+        },
+        "size": {
+          "6": 15
+        },
+        "weight": {
+          "6": "400"
+        },
+        "color": {
+          "6": "$colorFocus",
+          "7": "$color"
+        },
+        "letterSpacing": {
+          "5": 2,
+          "6": 1,
+          "7": 0,
+          "8": -1,
+          "9": -2,
+          "10": -3,
+          "12": -4,
+          "14": -5,
+          "15": -6
+        },
+        "face": {
+          "100": {
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
+          },
+          "200": {
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
+          },
+          "300": {
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
+          },
+          "400": {
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
+          },
+          "500": {
+            "normal": {
+              "val": "var(--font-audiowide)",
+              "isVar": true,
+              "key": "audiowide",
+              "name": "Audiowide"
+            }
+          },
+          "600": {
+            "normal": "audiowide"
+          },
+          "700": {
+            "normal": "audiowide"
+          },
+          "800": {
+            "normal": "audiowide"
+          },
+          "900": {
+            "normal": "audiowide"
           }
         }
       }
