--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,16 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@ducanh2912/next-pwa": "^9.7.1",
     "@tamagui/config": "latest",
     "@tamagui/next-theme": "latest",
     "expo": "^49.0.13",
     "next": "~13.5.4",
+    "raf": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
     "react-native-web": "~0.18.12",
     "react-native-web-lite": "latest",
-    "raf": "^3.4.1",
     "setimmediate": "^1.0.5",
     "solito": "^4.0.1"
   },
