feat: add ui for sign up and landing pages

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,13 +13,14 @@
     "@tamagui/lucide-icons": "latest",
     "@tamagui/shorthands": "latest",
     "@tamagui/themes": "latest",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "abitype": "^0.9.9",
     "burnt": "^0.11.0",
     "expo-image": "^1.5.1",
     "expo-router": "^2.0.8",
     "react-hook-form": "^7.47.0",
-    "remeda": "^1.27.0",
     "react-native-passkeys": "^0.1.6",
+    "remeda": "^1.27.0",
     "solito": "4.0.1",
     "viem": "^1.15.1",
     "wagmi": "^1.4.3",
