--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.7.1",
-    "@tamagui/config": "latest",
-    "@tamagui/next-theme": "latest",
+    "@tamagui/config": "1.74.13",
+    "@tamagui/next-theme": "1.74.13",
     "expo": "^49.0.13",
     "next": "~13.5.4",
     "raf": "^3.4.1",
@@ -13,15 +13,14 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
     "react-native-web": "~0.18.12",
-    "react-native-web-lite": "latest",
-    "setimmediate": "^1.0.5",
-    "solito": "^4.0.1"
+    "react-native-web-lite": "1.74.13",
+    "setimmediate": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@biomejs/biome": "^1.2.2",
     "@expo/next-adapter": "~5.0.0",
-    "@tamagui/next-plugin": "latest"
+    "@tamagui/next-plugin": "1.74.13"
   },
   "scripts": {
     "dev": "next dev",
