--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -7,12 +7,12 @@
   ],
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
-    "@tamagui/animations-react-native": "latest",
-    "@tamagui/colors": "latest",
-    "@tamagui/font-inter": "latest",
-    "@tamagui/lucide-icons": "latest",
-    "@tamagui/shorthands": "latest",
-    "@tamagui/themes": "latest",
+    "@tamagui/animations-react-native": "1.74.13",
+    "@tamagui/colors": "1.74.13",
+    "@tamagui/font-inter": "1.74.13",
+    "@tamagui/lucide-icons": "1.74.13",
+    "@tamagui/shorthands": "1.74.13",
+    "@tamagui/themes": "1.74.13",
     "@tanstack/react-query-devtools": "^4.36.1",
     "abitype": "^0.9.9",
     "burnt": "^0.11.0",
@@ -23,7 +23,7 @@
     "react-hook-form": "^7.47.0",
     "react-native-passkeys": "^0.1.6",
     "remeda": "^1.27.0",
-    "solito": "4.0.1",
+    "solito": "^4.0.1",
     "viem": "^1.15.1",
     "wagmi": "^1.4.3",
     "wretch": "^2.7.0",
