--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -18,15 +18,15 @@
   },
   "dependencies": {
     "@shopify/flash-list": "^1.6.1",
-    "@tamagui/animations-react-native": "latest",
-    "@tamagui/react-native-media-driver": "latest",
-    "@tamagui/shorthands": "latest",
-    "@tamagui/themes": "latest",
-    "@tamagui/toast": "latest",
+    "@tamagui/animations-react-native": "1.74.13",
+    "@tamagui/react-native-media-driver": "1.74.13",
+    "@tamagui/shorthands": "1.74.13",
+    "@tamagui/themes": "1.74.13",
+    "@tamagui/toast": "1.74.13",
     "@tanstack/react-virtual": "^3.0.0-beta.54",
-    "tamagui": "latest"
+    "tamagui": "1.74.13"
   },
   "devDependencies": {
-    "@tamagui/build": "latest"
+    "@tamagui/build": "1.74.13"
   }
 }
