--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,7 +3,7 @@
   "private": "true",
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.3",
-    "@forum/passkeys": "forumdaos/passkeys",
+    "@forum/passkeys": "forumdaos/passkeys#counterfactual-account",
     "@simplewebauthn/server": "^8.2.0",
     "next-auth": "^4.23.2"
   }
