--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,7 +13,8 @@
     "@tamagui/lucide-icons": "1.74.13",
     "@tamagui/shorthands": "1.74.13",
     "@tamagui/themes": "1.74.13",
-    "@tanstack/react-query-devtools": "^4.36.1",
+    "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query-devtools": "5.0.3",
     "abitype": "^0.9.9",
     "burnt": "^0.11.0",
     "expo-image": "^1.5.1",
@@ -24,8 +25,8 @@
     "react-native-passkeys": "^0.1.6",
     "remeda": "^1.27.0",
     "solito": "^4.0.1",
-    "viem": "^1.15.1",
-    "wagmi": "^1.4.3",
+    "viem": "2.0.0-alpha.17",
+    "wagmi": "alpha",
     "wretch": "^2.7.0",
     "zustand": "^4.4.3"
   }
