--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "encoding": "^0.1.13",
     "typescript": "^5.2.2"
   },
-  "dependencies": {
-    "permissionless": "^0.0.8"
+  "resolutions": {
+    "viem": "beta",
+    "wagmi": "beta"
   }
 }
