--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,7 +6,11 @@
     "*.css"
   ],
   "dependencies": {
+    "@alchemy/aa-accounts": "^0.2.0",
+    "@alchemy/aa-alchemy": "^0.2.0",
+    "@alchemy/aa-core": "^0.2.0",
     "@hookform/resolvers": "^3.3.1",
+    "@forum/passkeys": "forumdaos/passkeys#counterfactual-account",
     "@tamagui/animations-react-native": "1.74.13",
     "@tamagui/colors": "1.74.13",
     "@tamagui/font-inter": "1.74.13",
@@ -14,7 +18,7 @@
     "@tamagui/shorthands": "1.74.13",
     "@tamagui/themes": "1.74.13",
     "@tanstack/react-query": "^5.0.0",
-    "@tanstack/react-query-devtools": "5.0.3",
+    "@tanstack/react-query-devtools": "^5.7.1",
     "abitype": "^0.9.9",
     "burnt": "^0.11.0",
     "expo-image": "^1.5.1",
@@ -25,8 +29,9 @@
     "react-native-passkeys": "^0.1.6",
     "remeda": "^1.27.0",
     "solito": "^4.0.1",
-    "viem": "2.0.0-alpha.17",
-    "wagmi": "alpha",
+    "viem": "beta",
+    "wagmi": "beta",
+    "webauthn-zod": "^0.1.2",
     "wretch": "^2.7.0",
     "zustand": "^4.4.3"
   }
