--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,13 +8,15 @@
     "@tamagui/next-theme": "1.74.13",
     "expo": "^49.0.13",
     "next": "~13.5.4",
+    "next-safe-action": "^5.0.2",
     "raf": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
     "react-native-web": "~0.18.12",
     "react-native-web-lite": "1.74.13",
-    "setimmediate": "^1.0.5"
+    "setimmediate": "^1.0.5",
+    "webauthn-server-actions": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
