--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "@tamagui/config": "1.74.13",
     "@tamagui/next-theme": "1.74.13",
     "expo": "^49.0.13",
-    "next": "~13.5.4",
+    "next": "^14.0.1",
     "next-safe-action": "^5.0.2",
     "raf": "^3.4.1",
     "react": "^18.2.0",
